Fix T79162: 'prop_search' includes ID prefix in string properties

Regression from d6cefef98f87a

This also fixes an unreported issue where finding an exact match
wasn't being detected for items that contained an ID prefix.